fix inline mathjax z-index

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,3 +1,12 @@
+a {
+    color: darkred;
+    text-decoration: none;
+}
+
+span {
+    z-index: -1;
+}
+
 .container {
     max-width: 800px;
 }
@@ -40,21 +49,12 @@
     height: auto;
 }
 
-a {
-    color: darkred;
-    text-decoration: none;
-}
-
 .markdown-body {
     box-sizing: border-box;
     min-width: 200px;
     max-width: 800px;
     margin: 0 auto;
     padding: 1rem;
-}
-
-.MathJax {
-    z-index: -1;
 }
 
 .article-meta {
